[tool.poetry]
name = "mmm"
version = "0.7.0"
description = ""
authors = ["Taehyun <taehyun.jung@monolith.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
